--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
 		tools:ignore="QueryAllPackagesPermission" />
 
 	<application
+		android:roundIcon="@mipmap/ic_launcher_round"
 		android:icon="@mipmap/ic_launcher"
 		android:label="SKDEditor"
 		android:theme="@style/Theme.SKDEditor">
