--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 		targetSdk 33
 		versionCode 35
 		versionName "3.5"
-		resConfigs "en"
+		resConfigs 'en'
 		resValue "string", "version", versionName
 	}
 
@@ -30,11 +30,12 @@ android {
 	buildFeatures {
 		viewBinding true
 	}
+	namespace 'com.chichar.skdeditor'
 }
 
 dependencies {
 	implementation 'androidx.core:core-splashscreen:1.0.0'
-	implementation 'androidx.appcompat:appcompat:1.6.0'
+	implementation 'androidx.appcompat:appcompat:1.6.1'
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 	implementation 'com.google.android.material:material:1.8.0'
 	implementation 'androidx.preference:preference:1.1.0'
