--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,22 +4,24 @@ plugins {
 }
 
 android {
+	namespace 'com.rosstonovsky.skdeditor'
 	compileSdk 33
 
 	defaultConfig {
-		applicationId "com.chichar.skdeditor"
+		applicationId "com.rosstonovsky.skdeditor"
 		minSdk 21
 		targetSdk 33
-		versionCode 33
-		versionName "3.3"
-		resConfigs "en"
-		resValue "string", "version", versionName
+		versionCode 40
+		versionName "4.0"
+
+		vectorDrawables {
+			useSupportLibrary true
+		}
 	}
 
 	buildTypes {
 		release {
 			minifyEnabled true
-			shrinkResources false
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 		}
 	}
@@ -27,15 +29,38 @@ android {
 		sourceCompatibility JavaVersion.VERSION_1_8
 		targetCompatibility JavaVersion.VERSION_1_8
 	}
+	kotlinOptions {
+		jvmTarget = '1.8'
+	}
 	buildFeatures {
-		viewBinding true
+		compose true
+	}
+	composeOptions {
+		kotlinCompilerExtensionVersion '1.3.2'
+	}
+	packagingOptions {
+		resources {
+			excludes += '/META-INF/{AL2.0,LGPL2.1}'
+		}
 	}
 }
 
 dependencies {
-	implementation 'androidx.core:core-splashscreen:1.0.0'
-	implementation 'androidx.appcompat:appcompat:1.5.1'
+	implementation fileTree(dir: 'libs', include: ['catbox.aar', 'abxutils.aar'])
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-	implementation 'com.google.android.material:material:1.7.0'
-	implementation 'androidx.preference:preference:1.1.0'
+	implementation 'androidx.cardview:cardview:1.0.0'
+	debugImplementation("androidx.compose.ui:ui-tooling:1.4.3")
+	implementation("androidx.compose.ui:ui-tooling-preview:1.4.3")
+	implementation 'androidx.core:core-ktx:1.10.1'
+	implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
+	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+	implementation 'androidx.activity:activity-compose:1.7.2'
+	implementation platform('androidx.compose:compose-bom:2022.10.00')
+	implementation 'androidx.compose.ui:ui'
+	implementation 'androidx.compose.ui:ui-graphics'
+	implementation 'androidx.compose.ui:ui-tooling-preview'
+	implementation 'androidx.compose.material3:material3'
+	implementation 'androidx.core:core-splashscreen:1.0.1'
+	debugImplementation 'androidx.compose.ui:ui-tooling'
+	debugImplementation 'androidx.compose.ui:ui-test-manifest'
 }
