--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
 }
 
 dependencies {
+	implementation "com.google.accompanist:accompanist-systemuicontroller:0.31.5-beta"
 	implementation fileTree(dir: 'libs', include: ['catbox.aar', 'abxutils.aar'])
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 	implementation 'androidx.cardview:cardview:1.0.0'
