--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,15 @@ plugins {
 
 android {
 	namespace 'com.rosstonovsky.skdeditor'
-	compileSdk 33
+	compileSdk 34
 
 	defaultConfig {
 		applicationId "com.rosstonovsky.skdeditor"
 		minSdk 21
-		targetSdk 33
+		targetSdk 34
 		versionCode 40
 		versionName "4.0"
+		resConfigs 'en', 'uk'
 
 		vectorDrawables {
 			useSupportLibrary true
@@ -46,17 +47,18 @@ android {
 }
 
 dependencies {
-	implementation "com.google.accompanist:accompanist-systemuicontroller:0.31.5-beta"
-	implementation fileTree(dir: 'libs', include: ['catbox.aar', 'abxutils.aar'])
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+	implementation 'com.google.accompanist:accompanist-systemuicontroller:0.31.6-rc'
+	implementation fileTree(dir: 'libs', include: ['catbox.aar', 'abxutils.aar'])
 	implementation 'androidx.cardview:cardview:1.0.0'
 	debugImplementation("androidx.compose.ui:ui-tooling:1.4.3")
 	implementation("androidx.compose.ui:ui-tooling-preview:1.4.3")
 	implementation 'androidx.core:core-ktx:1.10.1'
-	implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
+	implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.0')
+	implementation("androidx.compose.foundation:foundation:1.6.0-alpha02")
 	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
 	implementation 'androidx.activity:activity-compose:1.7.2'
-	implementation platform('androidx.compose:compose-bom:2022.10.00')
+	implementation platform('androidx.compose:compose-bom:2023.06.01')
 	implementation 'androidx.compose.ui:ui'
 	implementation 'androidx.compose.ui:ui-graphics'
 	implementation 'androidx.compose.ui:ui-tooling-preview'
