--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx1024M" -Dfile.enc
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8.fullMode=true
+android.nonFinalResIds=false
